Fixed License in Package.json, why is Aaryan dumb sometimes

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "npx electron index.js"
   },
   "author": "AaryanKh",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "discord-rpc": "^4.0.1",
     "electron": "^13.1.6",
