--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "description": "A Discord RPC maker",
   "main": "index.js",
   "scripts": {
-    "start": "npx electron ./Src/Server.js"
+    "start": "npx electron ./Src/Server.js",
+    "dev": "npx electromon ./Src/Server.js"
+
   },
   "author": "AaryanKh",
   "license": "MIT",
   "dependencies": {
-    "electron": "^13.1.6"
+    "electron": "^13.1.6",
+    "ws": "^7.5.2"
+  },
+  "devDependencies": {
+    "electromon": "^1.0.10"
   }
 }
