--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "description": "A Discord RPC maker",
   "main": "index.js",
   "scripts": {
-    "start": "npx electron src/index.js"
+
+    "start": "npx electron ./Src/Server.js",
+    "dev": "npx electromon ./Src/Server.js"
+
   },
   "author": "AaryanKh",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "discord-rpc": "^4.0.1",
     "electron": "^13.1.6",
-    "node-fetch": "^2.6.1",
     "ws": "^7.5.2"
+  },
+  "devDependencies": {
+    "electromon": "^1.0.10"
   }
 }
